--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
 :root {
     --text-color: #DBE4EF;
-    --card-front-color: #672bd6;
+    --card-front-color: #144480;
     --card-back-color: #00F4BF;
 }
 
@@ -67,6 +67,7 @@ body {
     transform: rotateY(180deg);
 }
 
+
 .cartao__conteudo__pergunta,
 .cartao__conteudo__resposta {
     backface-visibility: hidden;
@@ -97,7 +98,7 @@ footer p {
     margin-top: 0.5rem;
 }
 
-@media (max-width:560px) {
+@media (max-width: 560px) {
 
     body {
         background: url(img/bg-mobile.webp);
